first draft update

--- a/index.html
+++ b/index.html
@@ -230,90 +230,180 @@
 	</section>
 
 	<section class="slide" data-level="0">
-		<h1></h1>
+		<h1>Example @ TOMCAT beamline</h1>
+		<p>Gypsum structure: </p>
+		<ul>
+			<li>scintillator: LAG 20 µm </li>
+			<li>monochromatic beam (32 keV) </li>
+			<li>1441 projections </li>
+			<li>10 min. per scan </li>
+		</ul>
+		<figure>
+			<img src="assets/k6.png" alt="gypsum example TOMCAT">
+			<figcaption></figcaption>
+		</figure>
+	</section>
+
+	<section class="slide" data-level="0">
+		<h1>Example @ TOMCAT beamline</h1>
+		<p>Change of gypsum pore structure during heating to 1000°C</p>
+		<p>fast scans taken during continuous heating of the sample (heating rate of 20°C/min)</p>
+		<ul>
+			<li>scintillator: LAG 100 µm </li>
+			<li>polychromatic beam </li>
+			<li>1001 projections </li>
+			<li>6 sec. per scan </li>
+		</ul>
+		<figure>
+			<img src="assets/k7.png" alt="gypsum example TOMCAT">
+			<figcaption></figcaption>
+		</figure>
+	</section>
+
+	<section class="slide" data-level="0">
+		<h1>High resolution X-ray CT </h1>
+		<h2>part 2</h2>
+		<p>With credits to the entire UGCT team (<a href="www.ugct.ugent.be">UGCT</a>) </p>
+		<figure>
+			<img src="assets/afbeelding23.png" alt="gypsum example TOMCAT">
+			<figcaption></figcaption>
+		</figure>
+	</section>
+
+	<section class="slide" data-level="0">
+		<h1>Practical considerations</h1>
 
 	</section>
 
 	<section class="slide" data-level="0">
-		<h1></h1>
+		<h1>What is my application?</h1>
+		<ul>
+			<li>Large or small sample size </li>
+			<li>Stability of the sample? </li>
+			<li>Static conditions or dynamic processes (slow or fast)? </li>
+			<li>Conditioning of the environment (e.g. freezing, drying, moisturizing): a closed test chamber needs to be transparant to
+				X-rays </li>
+			<li>...</li>
+		</ul>
+		<figure>
+			<img src="assets/afbeelding22.png" alt="CT setup example">
+			<figcaption></figcaption>
+		</figure>
+	</section>
+
+	<section class="slide" data-level="0">
+		<h1>Image resolution and sample size</h1>
+		<p>Just like digital photography, images are divided in discrete pixels/voxels </p>
+		<p>Sample size divided by number of pixels = voxel size </p>
+		<p>Sample should not be much larger than field of view (rotational movement) </p>
+		<p>High resolution only achievable on small objects! </p>
+		<p>Subsamples must be taken for each length scale </p>
+	</section>
+
+	<section class="slide" data-level="0">
+		<h1>Example resolution & sample size: drill core</h1>
+		<figure>
+			<img src="assets/k8.png" alt="drill core to sample">
+			<figcaption></figcaption>
+		</figure>
+	</section>
+
+	<section class="slide" data-level="0">
+		<h1>Example resolution & sample size: drill core</h1>
+		<p>CT image <strong>(resolution 60µm)</strong> </p>
+		<p>Information about: </p>
+		<ul>
+			<li>homogeneity/heterogeneity </li>
+			<li>sedimentary structures </li>
+			<li>fractures</li>
+			<li>Grain size distribution: only some large grains </li>
+			<li>Pore size distribution: only macroporosity </li>
+		</ul>
+		<figure>
+			<img src="assets/afbeelding28.png" alt="example: image">
+			<figcaption></figcaption>
+		</figure>
+		<figure>
+			<img src="assets/afbeelding29.png" alt="example: CT image half">
+			<figcaption></figcaption>
+		</figure>
+		<figure>
+			<img src="assets/afbeelding29a.png" alt="example: CT image">
+			<figcaption></figcaption>
+		</figure>
+		<figure>
+			<img src="assets/afbeelding30.png" alt="example: CT image cross sections">
+			<figcaption></figcaption>
+		</figure>
+	</section>
+
+	<section class="slide" data-level="0">
+		<h1>Example resolution & sample size: drill core</h1>
+		<p>for information about grains and pores a higher resolution is needed</p>
+		<p>=> subsampling</p>
 
 	</section>
 
 	<section class="slide" data-level="0">
-		<h1></h1>
-
+		<h1>Example resolution & sample size: drill core</h1>
+		<figure>
+			<img src="assets/afbeelding31.png" alt="example: CT image half">
+			<figcaption></figcaption>
+		</figure>
+		<figure>
+			<img src="assets/afbeelding32.png" alt="example: CT image">
+			<figcaption>
+				<p><strong>Subsample A (4 µm resolution)</strong></p>
+				<p>discrimination of mineral grains and pore space </p>
+			</figcaption>
+		</figure>
+		<figure>
+			<img src="assets/afbeelding33.png" alt="example: CT image cross sections">
+			<figcaption>
+				<p><strong>Subsample B (2.8 µm resolution)</strong></p>
+				<p>discrimination between different minerals (quartz, feldspar, clays) </p>
+				<p>Microporosity visible </p>
+			</figcaption>
+		</figure>
 	</section>
 
 	<section class="slide" data-level="0">
-		<h1></h1>
-
+		<h1>Example resolution & sample size: drill core</h1>
+		<figure>
+			<img src="assets/k9.png" alt="clay microporosity">
+			<figcaption>
+				<p>Capture microporosity in clays</p>
+				<p>-> SEM (nm resolutions)</p>
+			</figcaption>
+		</figure>
 	</section>
 
 	<section class="slide" data-level="0">
-		<h1></h1>
-
+		<h1>Example resolution & sample size: drill core</h1>
+		<figure>
+			<img src="assets/k10.png" alt="representative volume graph">
+			<figcaption></figcaption>
+		</figure>
 	</section>
 
 	<section class="slide" data-level="0">
-		<h1></h1>
-
+		<h1>Example resolution & sample size: drill core</h1>
+		<p><strong>Upscaling	</strong></p>
+		<p>Combining information from different sample sizes and resolutions to capture all the different porosity types by combining
+			different imaging techniques</p>
+		<figure>
+			<img src="assets/k11.png" alt="upscaling from a drill core">
+			<figcaption></figcaption>
+		</figure>
 	</section>
 
 	<section class="slide" data-level="0">
-		<h1></h1>
-
+		<h1>Add-on modules for in-situ imaging </h1>
+		<figure>
+			<img src="assets/k12.png" alt="Add-on modules for in-situ imaging">
+			<figcaption></figcaption>
+		</figure>
 	</section>
-
-	<section class="slide" data-level="0">
-		<h1></h1>
-
-	</section>
-
-	<section class="slide" data-level="0">
-		<h1></h1>
-
-	</section>
-
-	<section class="slide" data-level="0">
-		<h1></h1>
-
-	</section>
-
-	<section class="slide" data-level="0">
-		<h1></h1>
-
-	</section>
-
-	<section class="slide" data-level="0">
-		<h1></h1>
-
-	</section>
-
-	<section class="slide" data-level="0">
-		<h1></h1>
-
-	</section>
-
-	<section class="slide" data-level="0">
-		<h1></h1>
-
-	</section>
-
-	<section class="slide" data-level="0">
-		<h1></h1>
-
-	</section>
-
-	<section class="slide" data-level="0">
-		<h1></h1>
-
-	</section>
-
-	<section class="slide" data-level="0">
-		<h1></h1>
-
-	</section>
-
 
 
 
